TinyMCE is going to break my mind

--- a/src/scss/_tagify-custom.scss
+++ b/src/scss/_tagify-custom.scss
@@ -61,10 +61,10 @@ $hover-yiq: $bg-yiq * 1.33;
   --placeholder-color: transparent;
   --placeholder-color-focus: transparent;
   --tags-border-color: #343434;
-  --tag-pad: 0; // 0.1rem 0.3rem;
+  --tag-pad: 0; // #{toPixels(0.1rem)} #{toPixels(0.3rem)};
   align-items: center;
   height: 18px;
-  gap: 0.1rem;
+  gap: #{toPixels(0.1rem)};
 
   min-width: 100%;
   flex-wrap: nowrap;
@@ -105,7 +105,7 @@ $hover-yiq: $bg-yiq * 1.33;
 
   .tagify__input {
     flex-grow: 0.2;
-    padding: 0.1rem;
+    padding: #{toPixels(0.1rem)};
     display: flex;
     justify-items: center;
     align-content: center;
@@ -172,7 +172,7 @@ $hover-yiq: $bg-yiq * 1.33;
         font-family: "Fjalla One", sans-serif;
         margin: 0px 0 3px 3px;
         color: var(--blades-black);
-        padding: 0.1rem 0.25rem;
+        padding: #{toPixels(0.1rem)} #{toPixels(0.25rem)};
         border-radius: 5px;
         pointer-events: auto;
         line-height: 18px;
