--- a/src/scss/sheets/_item-sheets.scss
+++ b/src/scss/sheets/_item-sheets.scss
@@ -36,7 +36,7 @@
             text-align: center;
             background: linear-gradient(45deg, var(--blades-black-dark), var(--blades-black));
             color: var(--blades-white-bright);
-            font-size: toRem(26px);
+            font-size: 26px;
             font-family: var(--font-decorative);
             border-bottom: 2px solid var(--blades-white-bright);
             --form-field-height: 60px;
