--- a/src/scss/dialog/_dialogs.scss
+++ b/src/scss/dialog/_dialogs.scss
@@ -30,7 +30,7 @@
       //   justify-content: center;
       //   align-items: stretch;
       //   color: var(--blades-white);
-      //   padding: toRem(6px);
+      //   padding: 6px;
       //   hyphens: auto;
       //   text-align: justify;
       //   position: absolute;
@@ -158,7 +158,7 @@
           }
 
           .comp-title.item-title {
-            font-size: toRem(14px);
+            font-size: 14px;
             width: 100%;
           }
 
