--- a/src/scss/sheets/_faction-sheet.scss
+++ b/src/scss/sheets/_faction-sheet.scss
@@ -19,7 +19,7 @@
             grid-template-rows: join($heights, (), $separator: space);
 
             .sheet-title {
-              --sheet-title-font-size: #{toRem(48px)};
+              --sheet-title-font-size: 48px;
             }
             .comp-tier {
               grid-area: tier;
@@ -55,7 +55,7 @@
                       .clock-label {
                         flex-grow: 2;
                         font-family: var(--font-emphasis);
-                        font-size: toRem(18px);
+                        font-size: 18px;
                         color: var(--blades-white-bright);
                         text-align: left;
                         pointer-events: all
@@ -66,7 +66,7 @@
                         width: 80px;
                         margin: 0 10px;
                         font-family: var(--font-emphasis);
-                        font-size: toRem(18px);
+                        font-size: 18px;
                         color: var(--blades-white-bright);
                         text-align: center;
                         background: rgba(0, 0, 0, 0.25);
@@ -80,7 +80,7 @@
                         width: 120px;
                         margin: 0;
                         font-family: var(--font-emphasis);
-                        font-size: toRem(18px);
+                        font-size: 18px;
                         color: var(--blades-white-bright);
                         text-align: left;
                         background: rgba(0, 0, 0, 0.25);
