--- a/src/scss/tinymce/_tinymce-text-styles.scss
+++ b/src/scss/tinymce/_tinymce-text-styles.scss
@@ -49,7 +49,7 @@
     margin: 0 20px;
 
     p {
-      line-height: 1rem;
+      line-height: #{toPixels(1rem)};
       padding: 3px;
       margin: 4px 0;
 
@@ -57,7 +57,7 @@
         content: "◊";
         margin-right: 5px;
         font-family: var(--font-emphasis);
-        font-size: toRem(10px);
+        font-size: 10px;
         vertical-align: top;
         color: var(--blades-gold);
       }
